--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Roboto", sans-serif;
+}
+
 a {
   text-decoration: none;
   color: #000000;
-}
-
-* {
-  box-sizing: border-box;
 }
