Add CustomButton, FormInput, useForm to signup-page

--- a/src/pages/sign-up/sign-up.styles.scss
+++ b/src/pages/sign-up/sign-up.styles.scss
@@ -8,13 +8,14 @@
     margin: 0 auto;
   }
 
-  .signupPage__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .container {
+    margin: 0 auto;
+    width: 400px;
 
-    .signupPage__group {
-      margin-top: 20px;
+    .form-error-message {
+      display: block;
+      margin-top: 5px;
+      color: red;
     }
   }
 }
