Handle google sign in

--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -20,5 +20,10 @@
         color: grey;
       }
     }
+
+    .form__btnGroup {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
