--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -4,7 +4,7 @@
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
+  padding: 0 30px;
   font-size: 15px;
   background-color: black;
   color: white;
@@ -27,13 +27,14 @@
     outline: none;
   }
 
-  &.google-sign-in {
+  &.google-btn {
     background-color: #4285f4;
-    color: white;
+    border: 1px solid #4285f4;
+    color: #ffffff;
 
     &:hover {
-      background-color: #357ae8;
-      border: none;
+      background-color: #ffffff;
+      color: #4285f4;
     }
   }
 }
