--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -32,9 +32,35 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 20px;
 
-    .auth__link {
-      padding: 20px;
+    .user {
+      .user__link {
+        padding: 0 20px;
+
+        &:hover {
+          color: grey;
+        }
+      }
+
+      .sign-out {
+        border: none;
+        background-color: transparent;
+        font-size: 16px;
+
+        &:hover {
+          color: grey;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .sign-in {
+      font-size: 16px;
+
+      &:hover {
+        color: grey;
+      }
     }
   }
 }
