Styling artist tab in userPage

--- a/src/pages/user-page/user-page.styles.scss
+++ b/src/pages/user-page/user-page.styles.scss
@@ -1,8 +1,18 @@
 .user-page {
   width: 1320px;
-  margin: 0 auto;
+  margin: 0 auto 300px;
 
   .heading {
     margin-bottom: 5rem;
+  }
+
+  .nav {
+    .nav-link {
+      min-width: 200px;
+    }
+  }
+
+  .tab-content {
+    width: 100%;
   }
 }
