--- a/src/pages/user-page/components/artist/artist.styles.scss
+++ b/src/pages/user-page/components/artist/artist.styles.scss
@@ -42,40 +42,20 @@
     .form-image {
       margin-top: 25px;
       margin-left: 20px;
+      width: 400px;
 
       img {
         width: 100%;
-        max-width: 400px;
+        margin-bottom: 10px;
       }
 
-      .img-input {
-        height: 0;
-        overflow: hidden;
-        width: 0;
+      form {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
 
-        + label {
-          width: 200px;
-          height: 50px;
-          letter-spacing: 0.5px;
-          line-height: 50px;
-          padding: 0 30px;
-          font-size: 15px;
-          background-color: black;
-          color: white;
-          text-transform: uppercase;
-          font-family: "Roboto", sans-serif;
-          font-weight: bolder;
-          border: none;
-          cursor: pointer;
-          display: flex;
-          justify-content: center;
-          border: 1px solid black;
-          transition: all 0.3s;
-
-          &:hover {
-            background-color: white;
-            color: black;
-          }
+        .form__button {
+          margin-left: 20px;
         }
       }
     }
