--- a/src/pages/user-page/components/band/band.styles.scss
+++ b/src/pages/user-page/components/band/band.styles.scss
@@ -1,5 +1,16 @@
-.upload-image {
-  img {
-    width: 300px;
+.band {
+  .details {
+    .img-container {
+      width: 300px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .upload-image {
+    img {
+      width: 300px;
+    }
   }
 }
