--- a/src/pages/concert-page/concert-page.styles.scss
+++ b/src/pages/concert-page/concert-page.styles.scss
@@ -1,18 +1,41 @@
 .concert-page {
   max-width: 1320px;
   margin: 40px auto 0;
-  display: flex;
+  .container {
+    display: flex;
 
-  .image-container {
-    width: 50%;
+    .image-container {
+      width: 50%;
 
-    img {
-      width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+
+    .description-container {
+      margin-left: 20px;
+      width: 50%;
     }
   }
 
-  .description-container {
-    margin-left: 20px;
-    width: 50%;
+  .tickets-container {
+    margin-top: 50px;
+
+    .ticket {
+      padding: 5px;
+      border: 1px solid lightslategray;
+      border-radius: 5px;
+
+      .cart-btn {
+        padding: 0;
+        border: none;
+        background-color: transparent;
+
+        svg {
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
   }
 }
