--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -35,11 +35,31 @@
     padding: 20px;
 
     .user {
+      display: flex;
+      align-items: center;
+
       .user__link {
+        display: flex;
+        align-items: center;
         padding: 0 20px;
+
+        .cart-icon {
+          margin-top: -10px;
+          width: 40px;
+          height: 40px;
+        }
+
+        .cart-quantity {
+          font-size: 20px;
+          margin-left: 10px;
+        }
 
         &:hover {
           color: grey;
+
+          .cart-icon {
+            fill: grey;
+          }
         }
       }
 
