--- a/src/pages/user-band-page/user-band-page.styles.scss
+++ b/src/pages/user-band-page/user-band-page.styles.scss
@@ -51,5 +51,39 @@
         color: red;
       }
     }
+
+    .invitation-container {
+      .messages {
+        margin-top: 10px;
+
+        .success {
+          color: green;
+        }
+
+        .error {
+          color: red;
+        }
+      }
+    }
+
+    .modal {
+      .modal-dialog {
+        .modal-content {
+          .modal-body {
+            .messages {
+              margin-top: 10px;
+
+              .success {
+                color: green;
+              }
+
+              .error {
+                color: red;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
