--- a/src/pages/user-concert-page/user-concert-page.styles.scss
+++ b/src/pages/user-concert-page/user-concert-page.styles.scss
@@ -5,11 +5,44 @@
     margin-bottom: 40px;
 
     .img-wrapper {
-      width: 300px;
+      min-width: 300px;
       margin-right: 20px;
 
       img {
         width: 100%;
+      }
+    }
+
+    .details {
+      .details-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        p {
+          margin: 0;
+        }
+      }
+
+      .description {
+        margin: 0;
+      }
+
+      .date {
+        display: flex;
+
+        p {
+          margin: 0;
+          margin-right: 10px;
+        }
+      }
+
+      .venue {
+        margin: 0;
+      }
+
+      .genres {
+        margin: 0;
       }
     }
   }
