--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,18 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
+}
+
+#root {
+  height: 100vh;
 }
 
 a {
