--- a/src/pages/user-details-page/user-details-page.styles.scss
+++ b/src/pages/user-details-page/user-details-page.styles.scss
@@ -1,11 +1,13 @@
 .user-details-page {
+  width: 100%;
+  padding: 10px;
   h1 {
-    font-size: 30px;
+    font-size: 1.5rem;
   }
 
   .details {
     .email {
-      font-size: 20px;
+      font-size: 1rem;
     }
   }
 
