--- a/src/components/spinner/spinner.styles.scss
+++ b/src/components/spinner/spinner.styles.scss
@@ -1,7 +1,7 @@
 .spinner {
   position: absolute;
-  left: 48%;
-  top: 40%;
+  left: 40%;
+  top: 50%;
 
   .spinner-border {
     z-index: 1;
@@ -15,7 +15,7 @@
     left: 0;
     z-index: 1050;
     width: 100vw;
-    height: 100vw;
+    height: 100%;
     background-color: #000000;
     opacity: 0.4;
 
