--- a/src/pages/user-artist-page/user-artist.styles.scss
+++ b/src/pages/user-artist-page/user-artist.styles.scss
@@ -1,46 +1,47 @@
 .user-artist-page {
-  margin-left: 100px;
+  margin-top: 30px;
+  margin-bottom: 100px;
   .artist-details-container {
     display: flex;
-    margin-bottom: 100px;
+    margin: 0 20px 50px;
+    flex-direction: column;
+    align-items: center;
+
+    .image {
+      max-width: 400px;
+      img {
+        width: 100%;
+      }
+    }
 
     .details {
-      width: 40%;
+      margin-top: 20px;
+
       .group {
         display: flex;
-        font-size: 20px;
+        font-size: 2rem;
         margin-bottom: 15px;
+
+        .name {
+          font-weight: 700;
+          margin-right: 10px;
+        }
 
         p {
           margin: 0;
         }
-
-        .name {
-          margin-right: 10px;
-        }
-      }
-    }
-
-    .image {
-      margin-left: 20px;
-      width: 400px;
-      img {
-        width: 100%;
       }
     }
   }
 
   .forms-container {
     display: flex;
-
-    .form-details {
-      width: 40%;
-    }
+    flex-direction: column;
+    align-items: center;
+    margin: 0 20px;
 
     .form-image {
-      margin-top: 25px;
-      margin-left: 20px;
-      width: 400px;
+      max-width: 400px;
 
       img {
         width: 100%;
@@ -53,16 +54,78 @@
         .btn-container {
           width: 100%;
           display: flex;
-          justify-content: space-between;
+          flex-direction: column;
+          align-items: center;
 
           .form__button {
-            margin-left: 20px;
+            margin-top: 20px;
           }
         }
 
         .imageErrors {
           margin-top: 10px;
           color: red;
+        }
+      }
+    }
+
+    .form-details {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .user-artist-page {
+    .artist-details-container {
+      flex-direction: row;
+
+      .image {
+        flex: 1;
+      }
+
+      .details {
+        justify-content: space-around;
+        flex: 1;
+        margin: 0;
+        margin-left: 20px;
+        .group {
+          display: flex;
+          flex-direction: column;
+
+          .name {
+            line-height: 1;
+          }
+        }
+      }
+    }
+
+    .forms-container {
+      flex-direction: row;
+
+      .form-image {
+        flex: 1;
+      }
+
+      .form-details {
+        flex: 1;
+        margin-left: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .user-artist-page {
+    .artist-details-container {
+      .details {
+        .group {
+          display: flex;
+          flex-direction: row;
+
+          .name {
+            line-height: unset;
+          }
         }
       }
     }
