--- a/src/pages/user-band-page/user-band-page.styles.scss
+++ b/src/pages/user-band-page/user-band-page.styles.scss
@@ -1,48 +1,63 @@
 .user-band-page {
   border: 1px solid lightgray;
   border-radius: 10px;
-  padding: 10px;
+  margin: 40px 10px 100px;
 
-  .container {
-    .details {
+  .user-band-container {
+    padding: 10px 10px;
+
+    .details-container {
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
+      flex-direction: column;
+      align-items: center;
 
       .img-container {
-        width: 300px;
-        margin-right: 20px;
+        max-width: 300px;
 
         img {
           width: 100%;
         }
       }
 
-      p {
-        margin: 0;
-        flex: 1;
+      .details {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+          text-align: center;
+          margin: 0;
+          flex: 1;
+          font-size: 1.5rem;
+        }
+
+        .btn-wrapper {
+          margin-top: 10px;
+        }
       }
     }
 
     .upload-form-container {
-      margin-top: 20px;
+      margin-top: 10px;
       margin-bottom: 30px;
 
       .img-container {
-        width: 300px;
-        margin-bottom: 20px;
+        margin: 0 auto;
+        max-width: 300px;
 
         img {
+          margin-bottom: 20px;
           width: 100%;
         }
       }
 
       .button_container {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
 
         .select-image {
-          margin-right: 20px;
+          margin-bottom: 10px;
         }
       }
 
@@ -52,7 +67,33 @@
       }
     }
 
+    .members {
+      margin-bottom: 20px;
+
+      h4 {
+        font-size: 1.5rem;
+      }
+
+      .band {
+        border: 1px solid lightgray;
+        border-radius: 10px;
+        padding: 0 5px;
+        margin-top: 10px;
+
+        p {
+          margin: 5px 0;
+          font-size: 1rem;
+        }
+      }
+    }
+
     .invitation-container {
+      margin-top: 30px;
+      .invitation-header {
+        font-size: 1.5rem;
+        font-weight: 500;
+      }
+
       .messages {
         margin-top: 10px;
 
@@ -62,6 +103,26 @@
 
         .error {
           color: red;
+        }
+      }
+
+      .list-invitations {
+        margin-top: 20px;
+        .list-invitations-header {
+          font-size: 1.5rem;
+          font-weight: 500;
+        }
+
+        .invitation {
+          margin-top: 10px;
+          border: 1px solid lightgray;
+          border-radius: 10px;
+          padding: 0 5px;
+
+          p {
+            margin: 5px 0;
+            font-size: 1rem;
+          }
         }
       }
     }
@@ -85,5 +146,90 @@
         }
       }
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .user-band-page {
+    .user-band-container {
+      .details-container {
+        flex-direction: row;
+
+        .img-container {
+          max-width: 300px;
+          margin-right: 10px;
+
+          img {
+            width: 100%;
+          }
+        }
+        .details {
+          width: 100%;
+          align-items: flex-start;
+        }
+      }
+
+      .upload-form-container {
+        .upload-image {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          .img-container {
+            margin: 0;
+            margin-right: 10px;
+
+            img {
+              margin-bottom: 0;
+            }
+          }
+
+          .button_container {
+            align-items: flex-start;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .user-band-page {
+    .user-band-container {
+      .members {
+        .band {
+          display: flex;
+
+          p {
+            flex: 1;
+          }
+        }
+      }
+
+      .invitation-container {
+        .list-invitations {
+          margin-top: 20px;
+          .list-invitations-header {
+            font-size: 1.5rem;
+            font-weight: 500;
+          }
+
+          .invitation {
+            display: flex;
+            justify-content: space-between;
+
+            p {
+              margin: 5px 0;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .user-band-page {
+    margin-top: 10px;
   }
 }
