user-bands-page RWD

--- a/src/pages/user-bands-page/components/user-bands-band.styles.scss
+++ b/src/pages/user-bands-page/components/user-bands-band.styles.scss
@@ -1,12 +1,20 @@
 .user-bands-band {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
   border: 1px solid lightgray;
   border-radius: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+
+  &:hover {
+    color: gray;
+  }
 
   p {
+    font-size: 1rem;
     margin: 0;
     padding: 10px;
   }
@@ -21,5 +29,28 @@
 
   .date {
     flex: 1;
+  }
+  .edit {
+    display: none;
+    margin-right: 10px;
+    height: 1rem;
+    width: 1rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .user-bands-band {
+    flex-direction: row;
+
+    .edit {
+      display: block;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .user-bands-band {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
