--- a/src/pages/user-concert-page/components/user-concert-artists-bands.styles.scss
+++ b/src/pages/user-concert-page/components/user-concert-artists-bands.styles.scss
@@ -4,7 +4,7 @@
   .bands {
     margin-bottom: 20px;
     .title {
-      font-size: 24px;
+      font-size: 1.5rem;
       font-weight: 700;
     }
 
