--- a/src/pages/user-concerts-page/components/user-concerts-concert.styles.scss
+++ b/src/pages/user-concerts-page/components/user-concerts-concert.styles.scss
@@ -1,25 +1,60 @@
 .user-concert {
   border: 1px solid lightgray;
-  margin-bottom: 30px;
+  margin: 0 10px 20px;
+  padding: 0 5px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+
+  &:hover {
+    color: gray;
+  }
 
   .img-wrapper {
-    width: 300px;
-    margin-right: 20px;
+    max-width: 300px;
+    max-height: 200px;
+    margin: 0 auto;
+    display: flex;
 
     img {
       width: 100%;
+      object-fit: scale-down;
     }
   }
 
-  .upload-image {
-    .image {
-      width: 300px;
-
-      img {
-        width: 100%;
-      }
+  .details {
+    p {
+      margin: 5px 0;
+      font-size: 1rem;
     }
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .user-concert {
+    .details {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .user-concert {
+    flex-direction: row;
+    .img-wrapper {
+      margin: 0;
+    }
+
+    .details {
+      margin-left: 10px;
+      align-items: unset;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .user-concert {
+    margin-left: 0;
   }
 }
