--- a/src/pages/user-concerts-page/user-concerts-page.styles.scss
+++ b/src/pages/user-concerts-page/user-concerts-page.styles.scss
@@ -1,4 +1,19 @@
 .user-concerts-page {
+  margin-top: 30px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .concert-wrapper {
+    width: 100%;
+
+    h2 {
+      margin: 15px 0;
+      text-align: center;
+    }
+  }
+
   .modal {
     .modal-dialog {
       .modal-content {
@@ -15,6 +30,18 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .user-concerts-page {
+    margin-top: 10px;
+    align-items: flex-start;
+    .concert-wrapper {
+      h2 {
+        text-align: left;
       }
     }
   }
