user-details-page RWD

--- a/src/pages/user-details-page/user-details-page.styles.scss
+++ b/src/pages/user-details-page/user-details-page.styles.scss
@@ -26,3 +26,11 @@
     }
   }
 }
+
+@media screen and (min-width: 1200px) {
+  .user-details-page {
+    .form-container {
+      max-width: 500px;
+    }
+  }
+}
