--- a/src/pages/user-orders-page/user-orders.styles.scss
+++ b/src/pages/user-orders-page/user-orders.styles.scss
@@ -1,3 +1,29 @@
 .user-orders-page {
   width: 100%;
+  margin-top: 30px;
+  margin-bottom: 100px;
+
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .orders-container {
+    margin: 20px 10px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .user-orders-page {
+    margin-top: 10px;
+
+    h1 {
+      text-align: left;
+    }
+
+    .orders-container {
+      margin: 0;
+      margin-top: 10px;
+    }
+  }
 }
