--- a/src/components/forgot-password/forgot-password.styles.scss
+++ b/src/components/forgot-password/forgot-password.styles.scss
@@ -1,14 +1,21 @@
 .forgot-password {
-  margin: 0 auto;
+  margin: 0 10px;
   display: flex;
   flex-direction: column;
 
   h2 {
-    margin: 10px 0;
+    font-size: 1.5rem;
   }
 
-  .container {
+  .form-messages {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .forgot-password {
+    width: 100%;
+    max-width: 500px;
     margin: 0 auto;
-    width: 400px;
   }
 }
