--- a/src/components/new-password/new-password.styles.scss
+++ b/src/components/new-password/new-password.styles.scss
@@ -1,14 +1,27 @@
 .new-password {
-  margin: 0 auto;
+  margin: 50px 10px;
   display: flex;
   flex-direction: column;
 
   h2 {
-    margin: 10px 0;
+    font-size: 1.5rem;
   }
 
-  .container {
-    margin: 0 auto;
-    width: 400px;
+  .form-messages {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .new-password {
+    width: 100%;
+    max-width: 500px;
+    margin: 50px auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .new-password {
+    margin-top: 0;
   }
 }
