--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,17 +1,18 @@
 .signinPage {
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  margin: 0 10px;
 
   h2 {
-    margin: 10px 0;
+    font-size: 1.5rem;
   }
 
-  .signin__container {
-    margin: 0 auto;
-    width: 400px;
+  .subtitle {
+    font-size: 1rem;
+  }
 
-    .form__link {
+  .signin-container {
+    .password-link {
       display: block;
       margin-bottom: 10px;
       color: black;
@@ -21,9 +22,49 @@
       }
     }
 
-    .form__btnGroup {
+    .btn-group {
+      margin-top: 20px;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      align-items: center;
+
+      .signin-btn {
+        margin-bottom: 20px;
+      }
     }
+
+    .form-messages {
+      margin-top: 15px;
+    }
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .signinPage {
+    .signin-container {
+      .btn-group {
+        flex-direction: row;
+
+        .signin-btn {
+          margin-bottom: 0;
+          margin-right: 50px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .signinPage {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .signinPage {
+    width: 100%;
+    max-width: 550px;
   }
 }
