--- a/src/pages/cart-page/cart-page.styles.scss
+++ b/src/pages/cart-page/cart-page.styles.scss
@@ -1,11 +1,16 @@
 .cart-page {
   max-width: 1320px;
-  margin: 40px auto 0;
+  margin: 40px 10px 100px;
+
+  h2 {
+    font-size: 1.5rem;
+  }
 
   .cart {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     border: 1px solid lightgray;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -17,6 +22,7 @@
     }
 
     .delete-ticket {
+      margin-top: 10px;
       background: none;
       border: none;
 
@@ -35,17 +41,107 @@
 
   .summary {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // justify-content: space-between;
+    // align-items: center;
+    flex-direction: column;
 
-    p {
+    .total {
       margin: 0;
+    }
+
+    .purchase-btn {
+      margin: 10px auto;
     }
   }
 
   .error {
     h2 {
       color: red;
+    }
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .cart-page {
+    .cart {
+      .cart-header {
+        display: flex;
+
+        .event {
+          flex: 3;
+        }
+
+        .type {
+          flex: 1;
+        }
+      }
+
+      .cart-body {
+        display: flex;
+
+        .venue {
+          flex: 3;
+        }
+
+        .price {
+          flex: 1;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .cart-page {
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+
+    .summary {
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+
+      .purchase-btn {
+        margin: 0;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .cart-page {
+    max-width: 1100px;
+
+    .cart {
+      flex-direction: row;
+      align-items: center;
+      .cart-header {
+        flex: 1;
+        .event {
+          flex: 1;
+        }
+
+        .type {
+          flex: 1;
+        }
+      }
+
+      .cart-body {
+        flex: 1;
+        .venue {
+          flex: 1;
+        }
+
+        .price {
+          flex: 1;
+        }
+      }
+
+      .delete-ticket {
+        margin-top: 0;
+      }
     }
   }
 }
