--- a/src/pages/band-page/band-page.styles.scss
+++ b/src/pages/band-page/band-page.styles.scss
@@ -1,18 +1,32 @@
 .band-page {
-  max-width: 1320px;
+  max-width: 1200px;
   margin: 40px auto 0;
   display: flex;
+  flex-direction: column;
 
-  .image-container {
-    width: 50%;
+  .band-page-container {
+    margin: 0 10px;
 
-    img {
-      width: 100%;
+    .image-container {
+      max-width: 400px;
+      margin: 0 auto;
+
+      img {
+        width: 100%;
+      }
     }
-  }
 
-  .description-container {
-    margin-left: 20px;
-    width: 50%;
+    .description-container {
+      margin-top: 10px;
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        margin: 5px 0;
+        font-size: 1.3rem;
+      }
+    }
   }
 }
