--- a/src/pages/bands-page/components/band.styles.scss
+++ b/src/pages/bands-page/components/band.styles.scss
@@ -1,12 +1,59 @@
 .bands-page-band {
-  max-width: 1320px;
-  margin: 40px auto 0;
+  display: flex;
+  margin-bottom: 20px;
+  border: 1px solid lightgray;
+  padding: 5px;
+  border-radius: 10px;
+  width: 100%;
 
-  .image {
-    width: 400px;
+  &:hover {
+    color: lightslategray;
+  }
 
-    img {
-      width: 100%;
+  .bands-page-band-container {
+    width: 100%;
+
+    .image {
+      max-width: 300px;
+      max-height: 200px;
+      min-height: 150px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+
+      img {
+        width: 100%;
+        object-fit: scale-down;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .bands-page-band {
+    .bands-page-band-container {
+      display: flex;
+
+      .image {
+        flex: 1;
+      }
+
+      .description {
+        flex: 1;
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .bands-page-band {
+    .bands-page-band-container {
+      display: flex;
+
+      .image {
+        max-width: 400px;
+      }
     }
   }
 }
